[package]
name = "gensym"
version = "0.1.0"
authors = ["Erlend Tobiassen <erlend.tobiassen@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
syn = { version = "0.15", features = ["full"] }
proc-macro2 = "0.4"
quote = "0.6"