[package]
name = "gensym"
version = "0.1.1"
authors = ["Erlend Tobiassen <erlend.tobiassen@gmail.com>"]
description = "Creates unique identifiers for macros using procedural macros "
repository = "https://github.com/regiontog/gensym"
documentation = "https://docs.rs/gensym/latest/gensym/"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
uuid = { version = "1.3", features = ["v4"] }
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
